# MiracarsLuxuryCarRental

./: .env.sample  .gitignore  .lintstagedrc.json  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ENVIRONMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  _original_README.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  storage.rules  turbo.json  vercel.json
.github/workflows/: ci.yml  preview.yml
_original_vite_src/: App.tsx  index.css
_original_vite_src/components/: CarCard.tsx  CarGrid.tsx  Features.tsx  Hero.tsx  Testimonials.tsx
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: .gitkeep
apps/mobile/: .gitignore  README.md  app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: _layout.tsx  bookings.tsx  fleet.tsx  index.tsx  profile.tsx
apps/mobile/assets/: .gitkeep
apps/web/: README.md  i18n.ts  middleware.ts  next.config.mjs  package.json
apps/web/messages/: el.json  en.json
apps/web/public/: manifest.json
apps/web/public/icons/: .gitkeep
apps/web/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/lib/: metadata.ts
e2e/: README.md  accessibility.spec.ts  fleet.spec.ts  home.spec.ts
firebase/functions/: package.json
firebase/functions/src/: index.ts
src/: REF_FORWARDING_FIX.md
src/components/: AuthModal.tsx  BookingModal.tsx  CarDetailModal.tsx  Footer.tsx  Header.tsx
(+7 files in other folders)
